# arcflame

./: .gitignore  Cargo.toml  Dockerfile.node  Dockerfile.orchestrator  Makefile  PHASE2_AUDIT_FINDINGS.md  PHASE2_TEST_REPORT.md  PHASE2_VM_TEST_REPORT.md  PHASE3_VM_TEST_REPORT.md  README.md  SECURITY.md  VM_VALIDATION_REPORT.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
node-agent/: Cargo.toml  build.rs
node-agent/src/: main.rs
node-agent/src/drivers/: check.rs
node-agent/src/hardware/: benchmark.rs  cpu.rs  gpu.rs  memory.rs  mod.rs
node-agent/src/inference/: forward.rs  mod.rs  model.rs  rpc.rs  shard.rs
node-agent/src/network/: arcflare.rs  discovery.rs  grpc_client.rs  grpc_server.rs  mod.rs
node-agent/src/overclocking/: aggressive.rs  mod.rs  monitor.rs  safe.rs
node-agent/src/tuning/: hugepages.rs  io.rs  kernel.rs  mod.rs
orchestrator/: requirements.txt
orchestrator/src/arcflare/: __init__.py  arcflare_pb2.py  arcflare_pb2_grpc.py  main.py
orchestrator/src/arcflare/api/: dashboard.py  management.py  openai.py
orchestrator/src/arcflare/cli/: adapters.py
orchestrator/src/arcflare/cluster/: discovery.py  partition.py  topology.py
orchestrator/src/arcflare/inference/: grpc_client.py  llama_server.py  pipeline.py
orchestrator/tests/: conftest.py  test_api.py  test_health.py  test_pipeline.py
proto/: arcflare.proto
tools/gguf-splitter/: Cargo.toml
tools/gguf-splitter/src/: main.rs
tools/scripts/: deploy-node.sh  dev-up.sh
