[package]
name = "gguf-splitter"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gguf-splitter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
